# amplifier-module-provider-aleph-alpha

./: README.md  pyproject.toml
amplifier_module_provider_aleph_alpha/: __init__.py  _constants.py
amplifier_module_provider_openai_like/: __init__.py  _constants.py
tests/: conftest.py  test_apply_patch_integration.py  test_behavioral.py  test_capabilities.py  test_capabilities_wiring.py  test_close.py  test_default_model_and_display_names.py  test_emission_ordering.py  test_error_body_json.py  test_error_translation.py  test_get_info_defaults.py  test_gpt_5_5_capabilities.py  test_image_support.py  test_long_context_reporting.py  test_model_capabilities_override.py  test_openai_provider.py  test_pricing_and_vision.py  test_pro_variant_validator.py  test_reasoning_effort.py  test_reasoning_encrypted_content.py  test_reasoning_include_guard.py  test_reasoning_model_detection.py  test_response_fixtures.py  test_retry.py  test_streaming.py  test_usage_fields.py  test_validation.py  test_verbosity_collapse.py
