[project]
name = "amplifier-module-provider-aleph-alpha"
version = "1.0.0"
description = "Aleph Alpha provider for Amplifier (OpenAI Responses API compatible)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-aleph-alpha = "amplifier_module_provider_aleph_alpha:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_aleph_alpha",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

